public/analytics-pro/v0.14/_sources/howto-guides/installation.rst.txt
.. _Installation instructions:
..
    Copyright Tumult Labs 2024. All rights reserved.
    This file is part of Tumult Analytics Pro.
    It may only be used, reproduced, modified or distributed pursuant to
    Tumult Labs' Enterprise License Agreement or another commercial license
    agreement entered into between you and Tumult Labs.
    No other rights are granted to use this file in any way.

Installation instructions
=========================

This guide will help you set up |project| on your local machine.

Prerequisites
^^^^^^^^^^^^^

|project| is built in `Python <https://www.python.org/>`__, so a Python installation is required to use it.
It is compatible with Python 3.8 through 3.11 (Python 3.9 and above on Apple silicon), and has experimental support for Python 3.12.
Because Tumult Analytics uses PySpark for computation, it also `requires Java 8 or 11 <https://spark.apache.org/docs/3.1.1/index.html#downloading>`__, or Java 17 if PySpark 3.4 or later is used.


Tumult Analytics supports the ``x86_64`` processor architecture, as well as Apple silicon.

Below are instructions for installing these prerequisites on several common platforms.
If none of these apply to you, install Python 3 and Java from your OS package manager or manually, then proceed with the `pip` installation.
If you encounter any issues during the installation process, please `let us know <https://gitlab.com/tumult-labs/analytics/-/issues>`__!

.. tab-set::
   .. tab-item:: Linux (Debian-based)

       Python and ``pip``, Python's package manager, are likely already installed.
       If they are not, install them with:

       .. code-block:: bash

           apt install python3.11 python3-pip

       Java may already be installed as well.
       If it is not, install the Java Runtime Environment with:

       .. code-block:: bash

           apt install default-jre-headless


   .. tab-item:: Linux (Red Hat-based)

       Python and ``pip``, Python's package manager, may already be installed.
       On some releases, Python 2 may be installed by default, but not Python 3.
       To install Python 3, run:

       .. code-block:: bash

           yum install python3.11 python3-pip

       To install Java, run:

       .. code-block:: bash

           yum install java-1.8.0-openjdk-headless

       Note that despite the package name, this will install Java 8.


   .. tab-item:: macOS

       The below instructions assume the use of `Homebrew <https://brew.sh/>`__ for managing packages.
       If you do not already have Homebrew, it can be installed with:

       .. code-block:: bash

           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"

       Python may be installed with:

       .. code-block:: bash

           brew install python@3.11

       And Java may be installed with:

       .. code-block:: bash

           brew install openjdk@11

       For the system Java wrappers to find this JDK you may need to symlink it by following the instructions that Homebrew provides upon installation.
       The command will look similar to the following, but will differ depending on your CPU architecture:

       .. code-block:: bash

           sudo ln -sfn /opt/homebrew/opt/openjdk@11/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-11.jdk

       If you have more than one Java version installed on your system, use Java 11 by setting ``JAVA_HOME`` to ``$(/usr/libexec/java_home -v11)``.
       This can be done by, for example, adding ``export JAVA_HOME=$(/usr/libexec/java_home -v11)`` to ``.bashrc`` and then restarting your shell.


   .. tab-item:: Windows

       The only supported way to install |project| on Windows is using the `Windows Subsystem for Linux (WSL) <https://docs.microsoft.com/en-us/windows/wsl/about>`__.
       Once you have installed your preferred Linux distribution with WSL, follow the corresponding Linux installation instructions to get Tumult Analytics set up.



Installation
^^^^^^^^^^^^

Once the above prerequisites are installed, Tumult Analytics Pro can be installed using ``pip3`` with the below command.

.. note::

    This command uses a ``INDEX_URL`` variable. Please reach out to Tumult at ``support@tmlt.io`` and we will provide you with one.

.. code-block:: bash

  INDEX_URL=<Insert Tumult provided URL>
  pip3 install tmlt.analytics-pro --index-url $INDEX_URL

This will automatically install all of its Python dependencies as well.

.. note::

    If you already have Tumult Analytics installed on your machine, it will not interact well with Tumult Analytics Pro. We recommend you either:

    1. Install Tumult Analytics Pro in a new `virtual environment <https://packaging.python.org/en/latest/tutorials/installing-packages/#creating-virtual-environments>`__ to minimize interactions with your system Python environment.
    2. Uninstall Tumult Analytics before install Tumult Analytics Pro, using

        .. code-block:: bash

            python3 -m pip uninstall tmlt.analytics


Once installed, you will need to download the attached license file onto your machine, for example to ``~/.config/tmlt/analytics-pro-license.json``.
Then, set your ``TMLT_ANALYTICS_PRO_LICENSE`` environment variable to the path where you saved the license file.
This can be done by, for example, adding ``export TMLT_ANALYTICS_PRO_LICENSE="~/.config/tmlt/analytics-pro-license.json"`` to ``~/.bashrc`` for Bash or to ``~/.zshrc`` for Zsh.
You will likely need to restart any IDEs or other development tools so they can pick up the environment variable.

If you are unable to set environment variables for any reason, you can instead configure the license path programmatically via the :data:`tmlt.cfg.analytics.license_file_path_override` variable.


Optional: checking your installation
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Once you've installed |project|, you can run this command to
check that basic functionality works:

.. code-block:: bash

    python3 -c "from tmlt.analytics.utils import check_installation; check_installation()"

If |project| has been installed correctly, this command should finish successfully.
